--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,16 +20,32 @@ langchainhub = "^0.1.15"
 black = "^24.2.0"
 isort = "^5.13.2"
 pyright = "^1.1.352"
+pytest = "^8.1.1"
+pytest-cov = "^4.1.0"
 ruff = "^0.3.1"
 
 [tool.poetry.scripts]
 lchain = "langchain_scripts.lchain:main"
 
+[tool.isort]
+profile = "black"
+
 [tool.ruff]
 target-version = "py312"
+
 [tool.ruff.lint]
 select = ["ALL"]
-ignore = ["E501", "T201", "D211", "D212"]
+ignore = [
+  "E501",
+  "T201",
+  "D211",
+  "D212",
+  "D",
+]
+[tool.ruff.lint.extend-per-file-ignores]
+"test_*.py" = [
+  "S101",
+]
 
 [build-system]
 requires = ["poetry-core"]
